--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -174,14 +174,9 @@
     <bool name="config_forceToUseSelectedResolution">false</bool>
 
     <!-- Define device configs on boot -->
-    <string-array name="global_device_configs_override" translatable="false" />
-    <string-array name="device_configs_override" translatable="false" />
-    <string-array name="device_configs_propertyToKeep" translatable="false" />
-    <string-array name="device_configs_modifyAllowedPackages" translatable="false">
-        <item>android</item>
-        <item>com.android.settings</item>
-        <item>com.android.shell</item>
-        <item>com.android.frameworks.wmtests</item>
+    <string-array name="global_device_configs_override" translatable="false">
+    </string-array>
+    <string-array name="device_configs_override" translatable="false">
     </string-array>
 
     <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
